# WoW-data

./: .gitignore  Makefile  README.MD  data.py  gear_prog_chart.py  gear_source_table.py  generate_combined_report.py  pyproject.toml
auction-house/: OAuth.py  ah_scan.py  item_lookup.py
gear_prog/: data.py  gear_prog_chart.py  gear_source_table.py  generate_combined_report.py  make_gear_report.py
